alignment + formatting fixes

--- a/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
+++ b/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
@@ -414,7 +414,7 @@ $cell-edit-background-edit: #f3f8fe;
     > :not(.cellData) {
         display: none;
     }
-    &.numberFormat {
+    &.numberFormat,  &.currencyFormat, &.percentFormat{
         text-align: right;
     }
 }
@@ -474,6 +474,8 @@ $cell-edit-background-edit: #f3f8fe;
                 display: block;
                 padding-top: 5.5px;
                 cursor: not-allowed;
+                padding-left: 5px;
+                padding-right: 5px;
             }
             .cellEditWrapper {
                 display:flex;
